--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>clocl</title>
+</head>
+<body>
+    <div  class="clock">
+        <div class="seconds"></div>
+        <div class="minutes"></div>
+        <div class="hours"></div>
+    </div>
+</body>
+</html>
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html>
     <head>
     <meta charset="UTF-8">
@@ -25,4 +45,4 @@
             </form>
         </div>
     </body>
-</html>
+</html> -->
