--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="minutes"></div>
             <div class=hours"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
 
