--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div  class="clock">
-            <!-- <div class="num" id="1"><span>1</span></div>
+        <div class="point"></div>
+            <div class="num" id="1"><span>1</span></div>
             <div class="num" id="2"><span>2</span></div>
             <div class="num"id="3"><span>3</span></div>
             <div class="num"id="4"><span>4</span></div>
@@ -20,7 +21,7 @@
             <div class="num" id="10"><span>10</span></div>
             <div class="num" id="11"><span>11</span></div>
             <div class="num" id="12"><span>12</span></div>
-            <div class="seconds"></div>
+            <!-- <div class="seconds"></div>
             <div class="minutes"></div>
             <div class=hours"></div> -->
     </div>
