--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div  class="clock">
         <div class="point"></div>
-            <div class="num" id="1"><span>1</span></div>
+            <div class="num" id="num1"><span>1</span></div>
             <div class="num" id="2"><span>2</span></div>
-            <div class="num"id="3"><span>3</span></div>
+            <div class="num" id="3"><span>3</span></div>
             <div class="num"id="4"><span>4</span></div>
             <div class="num" id="5"><span>5</span></div>
             <div class="num" id="6"><span>6</span></div>
