--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <div  class="clock">
         <div class="point"></div>
             <div class="num" id="num1"><span>1</span></div>
-            <div class="num" id="2"><span>2</span></div>
-            <div class="num" id="3"><span>3</span></div>
-            <div class="num"id="4"><span>4</span></div>
-            <div class="num" id="5"><span>5</span></div>
-            <div class="num" id="6"><span>6</span></div>
-            <div class="num" id="7"><span>7</span></div>
-            <div class="num" id="8"><span>8</span></div>
-            <div class="num" id="9"><span>9</span></div>
-            <div class="num" id="10"><span>10</span></div>
-            <div class="num" id="11"><span>11</span></div>
-            <div class="num" id="12"><span>12</span></div>
+            <div class="num" id="num2"><span>2</span></div>
+            <div class="num" id="num3"><span>3</span></div>
+            <div class="num"id="num4"><span>4</span></div>
+            <div class="num" id="num5"><span>5</span></div>
+            <div class="num" id="num6"><span>6</span></div>
+            <div class="num" id="num7"><span>7</span></div>
+            <div class="num" id="num8"><span>8</span></div>
+            <div class="num" id="num9"><span>9</span></div>
+            <div class="num" id="num10"><span>10</span></div>
+            <div class="num" id="num11"><span>11</span></div>
+            <div class="num" id="num12"><span>12</span></div>
             <!-- <div class="seconds"></div>
             <div class="minutes"></div>
             <div class=hours"></div> -->
