--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clock</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div  class="clock">
+    <div class="clock">
         <div class="point"></div>
-            <div class="num" id="num1"><span>1</span></div>
-            <div class="num" id="num2"><span>2</span></div>
-            <div class="num" id="num3"><span>3</span></div>
-            <div class="num"id="num4"><span>4</span></div>
-            <div class="num" id="num5"><span>5</span></div>
-            <div class="num" id="num6"><span>6</span></div>
-            <div class="num" id="num7"><span>7</span></div>
-            <div class="num" id="num8"><span>8</span></div>
-            <div class="num" id="num9"><span>9</span></div>
-            <div class="num" id="num10"><span>10</span></div>
-            <div class="num" id="num11"><span>11</span></div>
-            <div class="num" id="num12"><span>12</span></div>
-            <!-- <div class="seconds"></div>
-            <div class="minutes"></div>
-            <div class=hours"></div> -->
+        <div class="num" id="num1"><span>1</span></div>
+        <div class="num" id="num2"><span>2</span></div>
+        <div class="num" id="num3"><span>3</span></div>
+        <div class="num" id="num4"><span>4</span></div>
+        <div class="num" id="num5"><span>5</span></div>
+        <div class="num" id="num6"><span>6</span></div>
+        <div class="num" id="num7"><span>7</span></div>
+        <div class="num" id="num8"><span>8</span></div>
+        <div class="num" id="num9"><span>9</span></div>
+        <div class="num" id="num10"><span>10</span></div>
+        <div class="num" id="num11"><span>11</span></div>
+        <div class="num" id="num12"><span>12</span></div>
+        <div class="seconds">
+            <div class="sechand">
+                <div class="hand"></div>
+                <div class="arrow"></div>
+            </div>
+        </div>
+        <div class="minutes"></div>
+        <div class=hours"></div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
 
 
