--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
                 <div class="arrow"></div>
             </div>
         </div>
-        <div class="minutes"></div>
-        <div class=hours"></div>
+        <div class="minutes">
+            <div class="minhand">
+                <div class="hand"></div>
+                <div class="arrow"></div>
+            </div>
+        </div>
+        <div class="hours">
+            <div class="hourhand">
+                <div class="hand"></div>
+                <div class="arrow"></div>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
