--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         <div class="seconds">
             <div class="sechand">
                 <div class="hand"></div>
-                <div class="arrow"></div>
+                <!-- <div class="arrow"></div> -->
             </div>
         </div>
         <div class="minutes">
             <div class="minhand">
                 <div class="hand"></div>
-                <div class="arrow"></div>
+                <!-- <div class="arrow"></div> -->
             </div>
         </div>
         <div class="hours">
             <div class="hourhand">
                 <div class="hand"></div>
-                <div class="arrow"></div>
+                <!-- <div class="arrow"></div> -->
             </div>
         </div>
     </div>
