--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="minutes">
             <div class="minhand">
                 <div class="hand"></div>
-                <div class="arrow"></div>
+                <div class="arrow">V</div>
             </div>
         </div>
         <div class="hours">
             <div class="hourhand">
                 <div class="hand"></div>
-                <div class="arrow"></div>
+                <div class="arrow">V</div>
             </div>
         </div>
     </div>
