--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <div class="num" id="num10"><span>10</span></div>
         <div class="num" id="num11"><span>11</span></div>
         <div class="num" id="num12"><span>12</span></div>
-        <div class="seconds">
+        <div class="seconds" id="sec">
             <div class="sechand">
                 <div class="hand"></div>
                 <div class="arrow">V</div>
             </div>
         </div>
-        <div class="minutes">
+        <div class="minutes" id="min">
             <div class="minhand">
                 <div class="hand"></div>
                 <div class="arrow">V</div>
             </div>
         </div>
-        <div class="hours">
+        <div class="hours" id="hr">
             <div class="hourhand">
                 <div class="hand"></div>
                 <div class="arrow">V</div>
