--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         <div class="seconds" id="sec">
             <div class="sechand">
                 <div class="hand"></div>
-                <div class="arrow">V</div>
+                <!-- <div class="arrow">V</div> -->
             </div>
         </div>
         <div class="minutes" id="min">
             <div class="minhand">
                 <div class="hand"></div>
-                <div class="arrow">V</div>
+                <!-- <div class="arrow">V</div> -->
             </div>
         </div>
         <div class="hours" id="hr">
             <div class="hourhand">
                 <div class="hand"></div>
-                <div class="arrow">V</div>
+                <!-- <div class="arrow">V</div> -->
             </div>
         </div>
     </div>
