--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="num" id="num11"><span>11</span></div>
         <div class="num" id="num12"><span>12</span></div>
         <div class="seconds" id="sec">
-            <div class="sechand">
+            <!-- <div class="sechand">
                 <div class="hand"></div>
-                <!-- <div class="arrow">V</div> -->
-            </div>
+                <div class="arrow">V</div>
+            </div> -->
         </div>
         <div class="minutes" id="min">
             <div class="minhand">
