--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="seconds" id="sec">
             <!-- <div class="sechand">
                 <div class="hand"></div>
-                <div class="arrow">V</div> 
+                <div class="arrow"></div> 
             </div> -->
         </div>
         <div class="minutes" id="min">
